# tspass

./: CMakeLists.txt  INSTALL  README  example-input.tspass  tl-flags-description.html
fotl-translate/src/: CMakeLists.txt  formula.cpp  formula.h  helpers.cpp  helpers.h  logic.cpp  logic.h  main.cpp  misc.cpp  misc.h  output.cpp  output.h  outputstream.cpp  outputstream.h  parser.y  run-tspass.sh  scanner.l
tspass/: CMakeLists.txt
tspass/src/: .kateconfig  CMakeLists.txt  alarm.c  alarm.h  analyze.c  analyze.h  approx.c  approx.h  clause.c  clause.h  clock.c  clock.h  closure.c  closure.h  cnf.c  cnf.h  component.c  component.h  condensing.c  condensing.h  context.c  context.h  defs.c  defs.h  dfg.h  dfg2ascii.c  dfg2dfg.c  dfg2otter.c  dfg2tptp.c  dfgparser.y  dfgscanner.l  doc-proof.c  doc-proof.h  eml.c  eml.h  flags.c  flags.h  foldfg.c  foldfg.h  graph.c  (+78 more)
